yaml/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flask-dev
  namespace: python-project
  selfLink: /api/v1/namespaces/python-project/services/flask-dev
  uid: 416ea6c1-4a17-11ea-9bcd-0a05d249ebab
  resourceVersion: '11668720'
  creationTimestamp: '2020-02-08T02:03:53Z'
  labels:
    app: flask-dev
    app.kubernetes.io/component: flask-dev
    app.kubernetes.io/instance: flask-dev
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: flask-dev-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: '3.6'
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/pybokeh/flask-dev'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 5000
  selector:
    app: flask-dev
    deploymentconfig: flask-dev
  clusterIP: 172.30.174.221
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
